# opactx

./: CONTRIBUTING.md  README.md  SCHEMA_DSL.md  TRANSFORMS.md  pyproject.toml
.circleci/: config.yml
src/opactx/cli/: __init__.py  app.py  build.py  init.py  inspect.py  list_plugins.py  renderers.py  run_opa.py  validate.py
src/opactx/config/: __init__.py  load.py  model.py
src/opactx/core/: __init__.py  build.py  events.py  init.py  inspect.py  list_plugins.py  run_opa.py  stages.py  validate.py
src/opactx/plugins/: __init__.py  registry.py
src/opactx/schema/: __init__.py  dsl.py  meta_schema.py
src/opactx/sources/: __init__.py  exec.py  file.py  http.py
src/opactx/templates/: __init__.py
src/opactx/templates/scaffold/: README.md  README.no-examples.md  __init__.py  opactx.minimal.yaml  opactx.no-examples.yaml  opactx.yaml
src/opactx/templates/scaffold/context/: exceptions.no-examples.yaml  exceptions.yaml  standards.no-examples.yaml  standards.yaml
src/opactx/templates/scaffold/fixtures/: inventory.json
src/opactx/templates/scaffold/policy/: README.md  README.no-examples.md  example.rego
src/opactx/templates/scaffold/schema/: context.schema.json  context.schema.no-examples.json  context.schema.no-examples.yaml  context.schema.yaml
src/opactx/transforms/: __init__.py  builtin.py
t1/: README.md
t1/context/: standards.yaml
tests/: conftest.py  test_build.py  test_init.py  test_schema_dsl.py  test_transforms_builtin.py  test_units.py  test_validate.py
